--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ button.margin-right {
 <center><img  width="400" height="350" src="https://lh3.googleusercontent.com/drive-viewer/AK7aPaC0qOJPjI88HpkudZQ-S97Y4svt3kQb-YB5WUyGlsPxkXB3QbdcvWV-CGZ92MbXeQX6xS8Q_TNhKUfI4CH8gwvtOMur=s1600"></center>
 
 <div class="flex-parent jc-center" style="margin-top: 20px">
-  <button onclick="doSometing()" class="margin-right">Not Danilo</button>
-  <button onclick="doSometing2()">Danilo</button>
+  <button onclick="doSomething()" class="margin-right">Not Danilo</button>
+  <button onclick="doSomething2()">Danilo</button>
 </div>
 
 <h1 id="verdict"></h1>
