--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ button.margin-right {
 
 <p style="margin-left: 275px; margin-right: 275px; margin-top: 40px; margin-bottom: 30px">If you're not Danilo, sucks to be you!  Use the "Not Danilo" buttons below to buy $DTUL and periodically withdraw your share of Danilo's future income.</p>
 
-<p style="margin-left: 275px; margin-right: 275px">If you ARE Danilo, what on God's earth did we do to deserve you?  Whenever you feel that the $DTUL purchases have reached a worthy level, use the buttons below to legally commit 20% of your future income in exchange for the purchase pool and to periodically distribute your income to $DTUL holders.</p>
+<p style="margin-left: 275px; margin-right: 275px">If you ARE Danilo, what on God's earth did we do to deserve you?  Whenever you feel that the $DTUL purchases have reached a worthy level, use the "Danilo" buttons below to legally commit 20% of your future income in exchange for the purchase pool and to periodically distribute your income to $DTUL holders.</p>
 
 <h2>For the two types of people in this world</h2>
 
