--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@ button.margin-right {
 </h3>
 
 <div class="flex-parent jc-center" style="margin-top: 20px">
+  <input type="number" placeholder="Number of ETH" style="margin-right: 40px" class="test">
+  <button type="submit" class="test">Agree</button>
+</div>
+
+<div class="flex-parent jc-center" style="margin-top: 20px">
   <button type="submit" class="margin-right" class="test">Buy $DTUL Now!</button>
   <button type="submit" class="test">Agree and Withdraw</button>
 </div>
