--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@ button.margin-right {
 </h3>
 
 <div class="flex-parent jc-center" style="margin-top: 20px">
-  <input type="number" placeholder="Number of ETH" style="margin-right: 40px" class="test">
-  <button type="submit" class="test">Agree</button>
+  <input type="number" placeholder="ETH to Convert" style="margin-right: 40px" class="test">
+  <button type="submit" class="test">Agree and Withdraw</button>
 </div>
 
-<div class="flex-parent jc-center" style="margin-top: 20px">
+<div class="flex-parent jc-center" style="margin-top: 20px; margin-left: 45px">
   <button type="submit" class="margin-right" class="test">Buy $DTUL Now!</button>
-  <button type="submit" class="test">Agree and Withdraw</button>
+  <input type="number" placeholder="ETH to Distribute" style="margin-right: 40px" class="test">
 </div>
 
 <div class="flex-parent jc-center" style="margin-top: 20px">
