--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ button:hover {
 </h3>
 
 <div class="flex-parent jc-center" style="margin-top: 20px">
-	<button onclick="show('popup2')" class="test">Buy $DTUL Now!</button>
+	<button onclick="show('popup2')" class="margin-right" class="test">Buy $DTUL Now!</button>
   <!-- This is what will be included inside the popup2 -->
     <div class="popup2" id="popup2">
       <input type="number" placeholder="ETH to Convert" style="margin-right: 40px" class="test">
@@ -242,7 +242,7 @@ button:hover {
       <input type="number" placeholder="ETH to Distribute" style="margin-right: 40px" class="test">
       <center><button type="submit" class="test" onclick="hide('popup3')">Distribute ETH</button></center>
     </div>
-    
+
      <script>
 
        $ = function(id) {
