--- a/index.html
+++ b/index.html
@@ -203,8 +203,11 @@ button:hover {
 	<button onclick="show('popup2')" class="margin-right" class="test" href="#">Buy $DTUL Now!</button>
   <!-- This is what will be included inside the popup2 -->
     <div class="popup2" id="popup2">
+    	<center>Hello Not Danilo!</center>
+    	<p>Enter the amount of ETH you'd like to covert to $DTUL:</p>
       <input type="number" placeholder="ETH to Convert" style="margin-right: 40px" class="test">
-      <center><button type="submit" class="test" onclick="hide('popup2')">Convert ETH to $DTUL</button></center>
+      <p>When you're ready to visit the moon, use the "Convert ETH to $DTUL" button below to purchase a proportionate share of Danilo's future revenue.</p>
+      <center><button type="submit" class="test" onclick="hide('popup2')" style="margin-bottom: 20px">Convert ETH to $DTUL</button></center>
       <center><a href="#" onclick="hide('popup2')">Close</a></center>
     </div>
   <button onclick="show('popup')" class="test" href="#">Agree and Withdraw</button>
@@ -214,7 +217,7 @@ button:hover {
       <p>I, Danilo Tuler, herein referred to as the "Undersigned", do hereby acknowledge, attest, and affirm that I shall, with full awareness and without coercion, remit a perpetual sum equal to twenty percent (20%) of the entirety of my gross revenue, derived from any and all sources, to the esteemed beneficiaries and recognized holders of $DTUL.</p>
       <p>Furthermore, the Undersigned irrevocably commits to maintaining an amicable and enduring relationship with the two individuals, colloquially referenced as "dumbasses", who were responsible for the drafting, programming, and implementation of the code underpinning this application. This agreement is binding and shall be governed by and construed in accordance with applicable laws.</p>
       <p>I acknowledge that by clicking "Agree and Withdraw" below and signing a blockchain transaction to withdraw the proceeeds of any $DTUL sales, I am legally bound by the terms of this agreement, a copy of which will be stored on chain.</p>
-      <center><button type="submit" class="test" onclick="hide('popup')">Agree and Withdraw</button></center>
+      <center><button type="submit" class="test" onclick="hide('popup')" style="margin-bottom: 20px">Agree and Withdraw</button></center>
       <center><a href="#" onclick="hide('popup')">Close</a></center>
     </div>
 
@@ -235,13 +238,16 @@ button:hover {
      </script>
   </div>
 
-<div class="flex-parent jc-center" style="margin-top: 20px; margin-left: 45px">
+<div class="flex-parent jc-center" style="margin-top: 20px">
   <button type="submit" class="margin-right" class="test">Withdraw Income</button>
   <button onclick="show('popup3')" class="test" href="#">Distribute Income</button>
   <!-- This is what will be included inside the popup3 -->
     <div class="popup3" id="popup3">
+    	<center><p>Hello Danilo!</p></center>
+    	<p>Enter your gross revenue (in ETH) since your last distribution to $DTUL holders:</p>
       <input type="number" placeholder="ETH to Distribute" style="margin-right: 40px" class="test">
-      <center><button type="submit" class="test" onclick="hide('popup3')">Distribute ETH</button></center>
+      <p>Use the "Distribute Revenue" button below to distribute your gross revenue to $DTUL holders for the current reporting period.</p>
+      <center><button type="submit" class="test" onclick="hide('popup3')" style="margin-bottom: 20px">Distribute Revenue</button></center>
       <center><a href="#" onclick="hide('popup3')">Close</a></center>
     </div>
 
