--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ button:hover {
       <center><p>BINDING LEGAL AGREEMENT</p></center>
       <p>I, Danilo Tuler, herein referred to as the "Undersigned", do hereby acknowledge, attest, and affirm that I shall, with full awareness and without coercion, remit a perpetual sum equal to twenty percent (20%) of the entirety of my gross revenue, derived from any and all sources, to the esteemed beneficiaries and recognized holders of $DTUL.</p>
       <p>Furthermore, the Undersigned irrevocably commits to maintaining an amicable and enduring relationship with the two individuals, colloquially referenced as "dumbasses", who were responsible for the drafting, programming, and implementation of the code underpinning this application. This agreement is binding and shall be governed by and construed in accordance with applicable laws.</p>
-      <p>I acknowledge that by clicking "Agree and Withdraw" below and signing a blockchain transaction to withdraw the proceeeds of any $DTUL sales, I am legally bound by the terms of this agreement, a copy of which will be stored on chain.</p>
+      <p>By clicking "Agree and Withdraw" below and signing a blockchain transaction to withdraw the proceeeds of any $DTUL sales, I am legally bound by the terms of this agreement.</p>
       <center><button type="submit" class="test" onclick="hide('popup')" style="margin-bottom: 20px">Agree and Withdraw</button></center>
       <center><a href="#" onclick="hide('popup')">Close</a></center>
     </div>
