--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ button:hover {
     	<h4>Hello Not Danilo!</h4>
     	<p>Enter the amount of ETH you'd like to covert to $DTUL:</p>
       <input type="number" placeholder="ETH to Convert" style="margin-right: 40px" class="test">
-      <p>When you're ready to visit the moon, use the "Convert ETH to $DTUL" button below to purchase a proportionate share of Danilo's future revenue.</p>
+      <p>Use the "Convert ETH to $DTUL" button below to purchase your proportionate share of Danilo's future revenue.</p>
       <button type="submit" class="test" onclick="hide('popup2')" style="margin-bottom: 20px">Convert ETH to $DTUL</button>
       <center><a href="#" onclick="hide('popup2')">Close</a></center>
     </div>
