--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@ button:hover {
   </div>
 
 <div class="flex-parent jc-center" style="margin-top: 20px">
-  <button type="submit" class="margin-right" class="test">Withdraw Income</button>
-  <button onclick="show('popup3')" class="test" href="#">Distribute Income</button>
+  <button type="submit" class="margin-right" class="test">Withdraw Revenue</button>
+  <button onclick="show('popup3')" class="test" href="#">Distribute Revenue</button>
   <!-- This is what will be included inside the popup3 -->
     <div class="popup3" id="popup3">
     	<h4>Hello Danilo!</h4>
