--- a/index.html
+++ b/index.html
@@ -1,167 +1,241 @@
 <!DOCTYPE html>
 <html>
+<script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.3.0/dist/web3.min.js"></script>
+<script src="script.js"></script>
 
 <head>
   <style>
+    body {
+      background-color: #f5f5f5;
+      font-family: 'Raleway', sans-serif;
+    }
 
-body{
-	background-color: #f5f5f5;
-	font-family: 'Raleway', sans-serif;
-}
+    /*Heading1*/
 
-/*Heading1*/
+    h1 {
+      color: #000000;
+      font-size: 44px;
+      margin-top: 40px;
+      text-align: center;
+    }
 
-h1{
-	color: #000000;
-	font-size: 44px;
-	margin-top: 40px;
-	text-align: center;
-}
+    /*Heading2*/
 
-/*Heading2*/
+    h2 {
+      color: #000000;
+      font-size: 28px;
+      margin-top: 40px;
+      text-align: center;
+    }
 
-h2{
-	color: #000000;
-	font-size: 28px;
-	margin-top: 40px;
-	text-align: center;
-}
+    /*Heading3*/
 
-/*Heading3*/
-
-h3{
-	color: #000000;
-	font-size: 22px;
-	margin-top: 40px;
-        margin-left: 490px
-}
+    h3 {
+      color: #000000;
+      font-size: 22px;
+      margin-top: 40px;
+      margin-left: 490px
+    }
 
 
-/*Buttons*/
+    /*Buttons*/
 
-.flex-parent {
-  display: flex;
-}
+    .flex-parent {
+      display: flex;
+    }
 
-.jc-center {
-  justify-content: center;
-}
+    .jc-center {
+      justify-content: center;
+    }
 
-button.margin-right {
-  margin-right: 40px;
-}
+    button.margin-right {
+      margin-right: 40px;
+    }
 
-button:hover {
-    background-color: #008DA5;
-    color: #FFF;
-    transition: all 0.3s ease 0s;
-}
+    button:hover {
+      background-color: #008DA5;
+      color: #FFF;
+      transition: all 0.3s ease 0s;
+    }
 
-.test {
-  height: 40px;
-  width:  120px;
-}
+    .test {
+      height: 40px;
+      width: 120px;
+    }
 
-/*Popup*/
+    /*Popup*/
 
-.popup {
-  display: none;
-  position: fixed;
-  padding: 10px;
-  width:d 280px;
-  left: 50%;
-  margin-left: -150px;
-  height: 350px;
-  top: 50%;
-  margin-top: -100px;
-  background: #FFF;
-  border: 3px solid #009DA5;
-  z-index: 20;
-}
+    .popup {
+      display: none;
+      position: fixed;
+      padding: 10px;
+      width: d 280px;
+      left: 50%;
+      margin-left: -150px;
+      height: 350px;
+      top: 50%;
+      margin-top: -100px;
+      background: #FFF;
+      border: 3px solid #009DA5;
+      z-index: 20;
+    }
 
-#popup:after {
-  position: fixed;
-  content: "";
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  background: rgba(0,0,0,0.5);
-  z-index: -2;
-}
+    #popup:after {
+      position: fixed;
+      content: "";
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      background: rgba(0, 0, 0, 0.5);
+      z-index: -2;
+    }
 
-#popup:before {
-  position: absolute;
-  content: "";
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  background: #FFF;
-  z-index: -1;
-}
-
+    #popup:before {
+      position: absolute;
+      content: "";
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      background: #FFF;
+      z-index: -1;
+    }
   </style>
 </head>
 
 <body>
 
-<h1>Tuleverage</h1>
+  <h1>Tuleverage</h1>
 
-  <center><img  width="400" height="350" src="https://lh3.googleusercontent.com/drive-viewer/AK7aPaC0qOJPjI88HpkudZQ-S97Y4svt3kQb-YB5WUyGlsPxkXB3QbdcvWV-CGZ92MbXeQX6xS8Q_TNhKUfI4CH8gwvtOMur=s1600"></center>
+  <center><img width="400" height="350"
+      src="https://lh3.googleusercontent.com/drive-viewer/AK7aPaC0qOJPjI88HpkudZQ-S97Y4svt3kQb-YB5WUyGlsPxkXB3QbdcvWV-CGZ92MbXeQX6xS8Q_TNhKUfI4CH8gwvtOMur=s1600">
+  </center>
 
-<h2>How it works</h2>
+  <h2>How it works</h2>
 
-<p style="margin-left: 275px; margin-right: 275px; margin-top: 40px; margin-bottom: 30px">If you're not Danilo, sucks to be you!  Use the "Not Danilo" buttons below to buy $DTUL and periodically withdraw your share of Danilo's future income.</p>
+  <p style="margin-left: 275px; margin-right: 275px; margin-top: 40px; margin-bottom: 30px">If you're not Danilo, sucks
+    to be you! Use the "Not Danilo" buttons below to buy $DTUL and periodically withdraw your share of Danilo's future
+    income.</p>
 
-<p style="margin-left: 275px; margin-right: 275px">If you ARE Danilo, what on God's earth did we do to deserve you?  Whenever you feel that the $DTUL purchases have reached a worthy level, use the "Danilo" buttons below to legally commit 20% of your future income in exchange for the purchase pool and to periodically distribute your income to $DTUL holders.</p>
+  <p style="margin-left: 275px; margin-right: 275px">If you ARE Danilo, what on God's earth did we do to deserve you?
+    Whenever you feel that the $DTUL purchases have reached a worthy level, use the "Danilo" buttons below to legally
+    commit 20% of your future income in exchange for the purchase pool and to periodically distribute your income to
+    $DTUL holders.</p>
 
-<h2>For the two types of people in this world</h2>
+  <h2>For the two types of people in this world</h2>
 
-<h3 class="sentence">Not Danilo&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspDanilo      
-</h3>
+  <h3 class="sentence">Not Danilo&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspDanilo
+  </h3>
 
-<div class="flex-parent jc-center" style="margin-top: 20px">
-  <input type="number" placeholder="ETH to Convert" style="margin-right: 40px" class="test">
-  <button onclick="show('popup')" class="test">Agree and Withdraw</button>
+  <div class="flex-parent jc-center" style="margin-top: 20px">
+    <input type="number" placeholder="ETH to Convert" style="margin-right: 40px" class="test">
+    <button onclick="show('popup')" class="test">Agree and Withdraw</button>
 
-<!-- This is what will be included inside the popup -->
+    <!-- This is what will be included inside the popup -->
     <div class="popup" id="popup">
-      <center><p>BINDING LEGAL AGREEMENT</p></center>
-      <p>I, Danilo Tuler, herein referred to as the "Undersigned", do hereby acknowledge, attest, and affirm that I shall, with full awareness and without coercion, remit a perpetual sum equal to twenty percent (20%) of the entirety of my gross revenue, derived from any and all sources, to the esteemed beneficiaries and recognized holders of the DTUL.</p>
-      <p>Furthermore, the Undersigned irrevocably commits to maintaining an amicable and enduring relationship with the two individuals, colloquially referenced as "dumbasses", who were responsible for the drafting, programming, and implementation of the code underpinning this application. This agreement is binding and shall be governed by and construed in accordance with applicable laws.</p>
-      <p>I acknowledge that by clicking "Agree and Withdraw" below and signing a blockchain transaction to withdraw the proceeeds of any $DTUL sales, I am legally bound by the terms of this agreement, a copy of which will be stored on chain.</p>
-      <center><button type="submit" class="test" onclick="hide('popup')">Agree and Withdraw</button></center>
+      <center>
+        <p>BINDING LEGAL AGREEMENT</p>
+      </center>
+      <p>I, Danilo Tuler, herein referred to as the "Undersigned", do hereby acknowledge, attest, and affirm that I
+        shall, with full awareness and without coercion, remit a perpetual sum equal to twenty percent (20%) of the
+        entirety of my gross revenue, derived from any and all sources, to the esteemed beneficiaries and recognized
+        holders of the DTUL.</p>
+      <p>Furthermore, the Undersigned irrevocably commits to maintaining an amicable and enduring relationship with the
+        two individuals, colloquially referenced as "dumbasses", who were responsible for the drafting, programming, and
+        implementation of the code underpinning this application. This agreement is binding and shall be governed by and
+        construed in accordance with applicable laws.</p>
+      <p>I acknowledge that by clicking "Agree and Withdraw" below and signing a blockchain transaction to withdraw the
+        proceeeds of any $DTUL sales, I am legally bound by the terms of this agreement, a copy of which will be stored
+        on chain.</p>
+      <center><button id="legal" type="submit" class="test" onclick="hide('popup')">Agree and Withdraw</button></center>
     </div>
 
-     <script>
-
-       $ = function(id) {
-         return document.getElementById(id);
-       }
-
-       var show = function(id) {
-	       $(id).style.display ='block';
-       }
-
-       var hide = function(id) {
-	       $(id).style.display ='none';
-       }
-
-     </script>
   </div>
 
-<div class="flex-parent jc-center" style="margin-top: 20px; margin-left: 45px">
-  <button type="submit" class="margin-right" class="test">Buy $DTUL Now!</button>
-  <input type="number" placeholder="ETH to Distribute" style="margin-right: 40px" class="test">
-</div>
+  <div class="flex-parent jc-center" style="margin-top: 20px; margin-left: 45px">
+    <button type="submit" class="margin-right" class="test">Buy $DTUL Now!</button>
+    <input type="number" placeholder="ETH to Distribute" style="margin-right: 40px" class="test">
+  </div>
 
-<div class="flex-parent jc-center" style="margin-top: 20px">
-  <button type="submit" class="margin-right" class="test">Withdraw Income</button>
-  <button type="submit" class="test">Distribute Income</button>
-</div>
+  <div class="flex-parent jc-center" style="margin-top: 20px">
+    <button type="submit" class="margin-right" class="test">Withdraw Income</button>
+    <button type="submit" class="test">Distribute Income</button>
+  </div>
 
-<center><img  width="400" height="350" style="margin-top: 40px; margin-bottom: 40px" src="https://lh3.googleusercontent.com/drive-viewer/AK7aPaCEATcDQ-aLMjDg4EID5Dn1uecS17DWjR8JtVZN5rp_repH-GW6x7KN3NHbLszQ-2rXzntdNElGfNIKKv8nNsgdoyV--w=s1600"></center>
+  <center><img width="400" height="350" style="margin-top: 40px; margin-bottom: 40px"
+      src="https://lh3.googleusercontent.com/drive-viewer/AK7aPaCEATcDQ-aLMjDg4EID5Dn1uecS17DWjR8JtVZN5rp_repH-GW6x7KN3NHbLszQ-2rXzntdNElGfNIKKv8nNsgdoyV--w=s1600">
+  </center>
+  <script>
+    // First, check if Web3 has been injected by the browser (Mist/MetaMask)
+    let web3js;
+    if (typeof web3 !== 'undefined') {
+      // Use Mist/MetaMask's provider
+      web3js = new Web3(web3.currentProvider);
+    } else {
+      console.log('No web3? Please trying using MetaMask!');
+    }
 
+    async function initiateMetaMaskTransaction() {
+      if (typeof ethereum !== 'undefined') {
+        await ethereum.enable();
+
+        // Get the user's current account (address) from MetaMask
+        const accounts = await web3js.eth.getAccounts();
+        const fromAddress = accounts[0];
+
+
+        // Assuming your contract ABI includes the addInput function
+        const contractABI = [ 
+            {
+                "constant": false,
+                "inputs": [
+                    {
+                        "name": "_address",
+                        "type": "address"
+                    },
+                    {
+                        "name": "_calldata",
+                        "type": "bytes"
+                    }
+                ],
+                "name": "addInput",
+                "outputs": [],
+                "payable": false,
+                "stateMutability": "nonpayable",
+                "type": "function"
+            }
+            // ... other ABI items ...
+        ];
+
+        const contractAddress = '0x59b22D57D4f067708AB0c00552767405926dc768';
+        const contractInstance = new web3js.eth.Contract(contractABI, contractAddress);
+
+        const inputData = contractInstance.methods.addInput('0x70ac08179605AF2D9e75782b8DEcDD3c22aA4D0C', '0x2ca15122').encodeABI();
+
+        const txParams = {
+            from: fromAddress,
+            to: contractAddress,
+            data: inputData,
+            gas: 200000,  // You might need to adjust the gas limit based on the function's consumption
+            chainId: 31337 // This is for the local testnet. Adjust if needed.
+        }
+
+        web3js.eth.sendTransaction(txParams, (err, transactionId) => {
+            if (err) {
+                console.log('Transaction failed!', err);
+            } else {
+                console.log('Transaction successful!', transactionId);
+            }
+        });      }
+    }
+
+    // When legal button is clicked, initiate MetaMask transaction
+    document.getElementById('legal').addEventListener('click', function () {
+      initiateMetaMaskTransaction();
+    });
+
+  </script>
 </body>
+
 </html>
