--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ button:hover {
 
 <h2>For the two types of people in this world</h2>
 
-<p style="margin-left: 275px; margin-right: 275px; margin-top: 40px; margin-bottom: 30px">If you're not Danilo, sucks to be you!  Use the "Not Danilo" buttons below to buy $DTUL and periodically withdraw your share of Danilo's future revenue.</p>
+<p style="margin-left: 275px; margin-right: 275px; margin-top: 40px; margin-bottom: 30px">If you're not Danilo, that's unfortunate for you.  But don't fret!  Use the "Not Danilo" buttons below to buy $DTUL and periodically withdraw your share of Danilo's future revenue.</p>
 
 <p style="margin-left: 275px; margin-right: 275px">If you ARE Danilo, what on God's earth did we do to deserve you?  Whenever you feel that the $DTUL purchases have reached a worthy level, use the "Danilo" buttons below to legally commit 20% of your future income in exchange for the purchase pool and to periodically distribute your revenue to $DTUL holders.</p>
 
