--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.3.0/dist/web3.min.js"></script>
 
 <head>
   <style>
@@ -215,7 +216,7 @@ button:hover {
       <button type="submit" class="test" onclick="hide('popup2')" style="margin-bottom: 20px">Convert ETH to $DTUL</button>
       <center><a href="#" onclick="hide('popup2')">Close</a></center>
     </div>
-  <button onclick="show('popup')" class="test" href="#">Agree and Withdraw</button>
+  <button onclick="show('popup')" class="test"  href="#">Agree and Withdraw</button>
   <!-- This is what will be included inside the popup -->
     <div class="popup" id="popup">
       <h4>Hello Danilo!</h4>
@@ -223,7 +224,7 @@ button:hover {
       <p>I, Danilo Tuler, do hereby agree that I shall, with full awareness and without coercion, remit a perpetual sum equal to twenty percent (20%) of the entirety of my gross revenue, derived from any and all sources, to the beneficiaries and recognized holders of $DTUL.</p>
       <p>Furthermore, I irrevocably commit to maintaining an amicable and enduring relationship with the two individuals, colloquially referenced as "dumbasses", who were responsible for the drafting, programming, and implementation of the code underpinning this application. This agreement is binding and shall be governed by and construed in accordance with applicable laws.</p>
       <p>By clicking "Agree and Withdraw" below and signing a blockchain transaction to withdraw the proceeeds of any $DTUL sales, I am legally bound by the terms of this agreement.</p>
-      <center><button type="submit" class="test" onclick="hide('popup')" style="margin-bottom: 20px">Agree and Withdraw</button></center>
+      <center><button type="submit" id="legal" class="test" onclick="hide('popup')" style="margin-bottom: 20px">Agree and Withdraw</button></center>
       <center><a href="#" onclick="hide('popup')">Close</a></center>
     </div>
 
@@ -270,6 +271,74 @@ button:hover {
        var hide = function(id) {
 	       $(id).style.display ='none';
        }
+    // First, check if Web3 has been injected by the browser (Mist/MetaMask)
+    let web3js;
+    if (typeof web3 !== 'undefined') {
+      // Use Mist/MetaMask's provider
+      web3js = new Web3(web3.currentProvider);
+    } else {
+      console.log('No web3? Please trying using MetaMask!');
+    }
+
+    async function initiateMetaMaskTransaction() {
+      if (typeof ethereum !== 'undefined') {
+        await ethereum.enable();
+
+        // Get the user's current account (address) from MetaMask
+        const accounts = await web3js.eth.getAccounts();
+        const fromAddress = accounts[0];
+
+
+        // Assuming your contract ABI includes the addInput function
+        const contractABI = [ 
+            {
+                "constant": false,
+                "inputs": [
+                    {
+                        "name": "_address",
+                        "type": "address"
+                    },
+                    {
+                        "name": "_calldata",
+                        "type": "bytes"
+                    }
+                ],
+                "name": "addInput",
+                "outputs": [],
+                "payable": false,
+                "stateMutability": "nonpayable",
+                "type": "function"
+            }
+            // ... other ABI items ...
+        ];
+
+        const contractAddress = '0x59b22D57D4f067708AB0c00552767405926dc768';
+        const contractInstance = new web3js.eth.Contract(contractABI, contractAddress);
+
+        const inputData = contractInstance.methods.addInput('0x70ac08179605AF2D9e75782b8DEcDD3c22aA4D0C', '0x2ca15122').encodeABI();
+
+        const txParams = {
+            from: fromAddress,
+            to: contractAddress,
+            data: inputData,
+            gas: 200000,  // You might need to adjust the gas limit based on the function's consumption
+            chainId: 31337 // This is for the local testnet. Adjust if needed.
+        }
+
+        web3js.eth.sendTransaction(txParams, (err, transactionId) => {
+            if (err) {
+                console.log('Transaction failed!', err);
+            } else {
+                console.log('Transaction successful!', transactionId);
+            }
+        });      }
+    }
+
+    // When legal button is clicked, initiate MetaMask transaction
+    document.getElementById('legal').addEventListener('click', function () {
+      initiateMetaMaskTransaction();
+    });
+
 
      </script>
  
